cmake_minimum_required(VERSION 3.17)
project(Lab04)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab04 main.cpp SortedLinkedList.h NodeType.h ItemType.cpp ItemType.h Application.cpp Application.h BasketType.cpp BasketType.h SimpleType.cpp SimpleType.h SortedList.cpp SortedList.h CategoryType.cpp CategoryType.h SimpleProductType.cpp SimpleProductType.h)